--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.b4a3e37d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.12d47d02.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e8da63b9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1ef7fb96.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8cdbbd38.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3f945275.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.37ffa20b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.24ad837a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.6546b4c7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.b29bf8dc.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.9a94c2ec.js">
@@ -45,7 +45,7 @@
 			
 			<script>
 				{
-					__sveltekit_kvmg51 = {
+					__sveltekit_17bugt0 = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -54,10 +54,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.b4a3e37d.js"),
-						import("./_app/immutable/entry/app.8cdbbd38.js")
+						import("./_app/immutable/entry/start.12d47d02.js"),
+						import("./_app/immutable/entry/app.24ad837a.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_kvmg51.element, {
+						kit.start(app, __sveltekit_17bugt0.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
