--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7915a298.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4a291ba3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.64628efc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.ccdc7905.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.13d00bd8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.088627b2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.851110ea.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2fa69c28.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7f59c1c6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.1309ce47.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.svelte.faaa504d.js">
@@ -55,7 +55,7 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/api/posts">{"status":200,"statusText":"","headers":{},"body":"[{\"meta\":{\"title\":\"Druhý příspěvek\",\"date\":\"2023-03-10\"},\"path\":\"/blog/2\"},{\"meta\":{\"title\":\"První post\",\"date\":\"2021-12-14\"},\"path\":\"/blog/1\"}]"}</script>
 			<script>
 				{
-					__sveltekit_13783y1 = {
+					__sveltekit_ct52bd = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -64,10 +64,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7915a298.js"),
-						import("./_app/immutable/entry/app.13d00bd8.js")
+						import("./_app/immutable/entry/start.4a291ba3.js"),
+						import("./_app/immutable/entry/app.2fa69c28.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_13783y1.element, {
+						kit.start(app, __sveltekit_ct52bd.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
