--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a67d5717.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fd779398.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1fb15d6f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.e11bd392.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.21ed3e52.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.576beb1b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.c1212412.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.f4c07b15.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.3de89eb3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.bc09f0e2.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.svelte.faaa504d.js">
@@ -55,7 +55,7 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/api/posts">{"status":200,"statusText":"","headers":{},"body":"[{\"meta\":{\"title\":\"Druhý příspěvek\",\"date\":\"2023-03-10\"},\"path\":\"/blog/2\"},{\"meta\":{\"title\":\"První post\",\"date\":\"2021-12-14\"},\"path\":\"/blog/1\"}]"}</script>
 			<script>
 				{
-					__sveltekit_1v1kftf = {
+					__sveltekit_7bjyik = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -64,10 +64,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a67d5717.js"),
-						import("./_app/immutable/entry/app.21ed3e52.js")
+						import("./_app/immutable/entry/start.fd779398.js"),
+						import("./_app/immutable/entry/app.f4c07b15.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1v1kftf.element, {
+						kit.start(app, __sveltekit_7bjyik.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
