--- a/blog.html
+++ b/blog.html
@@ -6,18 +6,18 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c54a39c8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3c9da1c9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fd743c4e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.9209c7f8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cecf548c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ce9c240a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.00ffcecd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b32380da.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.1cbfbf4c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7443c353.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.svelte.faaa504d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.js.1f532493.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page.c3fbb11b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.js.ead3295f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page.324e1304.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -55,7 +55,7 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/api/posts">{"status":200,"statusText":"","headers":{},"body":"[{\"meta\":{\"title\":\"Druhý příspěvek\",\"date\":\"2023-03-10\"},\"path\":\"/blog/2\"},{\"meta\":{\"title\":\"První post\",\"date\":\"2021-12-14\"},\"path\":\"/blog/1\"}]"}</script>
 			<script>
 				{
-					__sveltekit_1mvlh6k = {
+					__sveltekit_cq2yzd = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -64,10 +64,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c54a39c8.js"),
-						import("./_app/immutable/entry/app.cecf548c.js")
+						import("./_app/immutable/entry/start.3c9da1c9.js"),
+						import("./_app/immutable/entry/app.b32380da.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1mvlh6k.element, {
+						kit.start(app, __sveltekit_cq2yzd.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
