--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c54a39c8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3c9da1c9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fd743c4e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.9209c7f8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cecf548c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ce9c240a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.00ffcecd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b32380da.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.1cbfbf4c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7443c353.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.9a94c2ec.js">
@@ -45,7 +45,7 @@
 			
 			<script>
 				{
-					__sveltekit_1mvlh6k = {
+					__sveltekit_cq2yzd = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -54,10 +54,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c54a39c8.js"),
-						import("./_app/immutable/entry/app.cecf548c.js")
+						import("./_app/immutable/entry/start.3c9da1c9.js"),
+						import("./_app/immutable/entry/app.b32380da.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1mvlh6k.element, {
+						kit.start(app, __sveltekit_cq2yzd.element, {
 							node_ids: [0, 2],
 							data,
 							form: null,
