--- a/html-page.html
+++ b/html-page.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3c9da1c9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.12c58577.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ce9c240a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.00ffcecd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.b32380da.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.78d1bb28.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.b5084e23.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3e747781.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7443c353.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.3b6040dd.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/html-page-page.svelte.2b988587.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/html-page-page.svelte.e0d9963e.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -45,7 +45,7 @@
 			
 			<script>
 				{
-					__sveltekit_cq2yzd = {
+					__sveltekit_17sajju = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -54,10 +54,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3c9da1c9.js"),
-						import("./_app/immutable/entry/app.b32380da.js")
+						import("./_app/immutable/entry/start.12c58577.js"),
+						import("./_app/immutable/entry/app.3e747781.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_cq2yzd.element, {
+						kit.start(app, __sveltekit_17sajju.element, {
 							node_ids: [0, 5],
 							data,
 							form: null,
