--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0f6f45ea.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fe3e8fe4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ff5f1ce7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.6fd6e974.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ce204347.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.88e0487d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.d1e2aec9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.78038835.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.264db0ba.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.aa199f08.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/blog-page.svelte.faaa504d.js">
@@ -55,7 +55,7 @@
 			<script type="application/json" data-sveltekit-fetched data-url="/api/posts">{"status":200,"statusText":"","headers":{},"body":"[{\"meta\":{\"title\":\"Druhý příspěvek\",\"date\":\"2023-03-10\"},\"path\":\"/blog/2\"},{\"meta\":{\"title\":\"První post\",\"date\":\"2021-12-14\"},\"path\":\"/blog/1\"}]"}</script>
 			<script>
 				{
-					__sveltekit_w0nqpm = {
+					__sveltekit_i3rt7c = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -64,10 +64,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0f6f45ea.js"),
-						import("./_app/immutable/entry/app.ce204347.js")
+						import("./_app/immutable/entry/start.fe3e8fe4.js"),
+						import("./_app/immutable/entry/app.78038835.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_w0nqpm.element, {
+						kit.start(app, __sveltekit_i3rt7c.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
