--- a/html-page.html
+++ b/html-page.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.f04f3089.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.04585fff.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.878af4ad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ac709e5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4a7f80b0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.f2a2f42a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.7bafc5db.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0974794e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.50b0019e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1ff0a5e4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.aed821e1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.6d75bffb.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/html-page-page.svelte.2b988587.js">
@@ -45,7 +45,7 @@
 			
 			<script>
 				{
-					__sveltekit_cfnod4 = {
+					__sveltekit_1t1a0mr = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -54,10 +54,10 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.04585fff.js"),
-						import("./_app/immutable/entry/app.7bafc5db.js")
+						import("./_app/immutable/entry/start.878af4ad.js"),
+						import("./_app/immutable/entry/app.1ff0a5e4.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_cfnod4.element, {
+						kit.start(app, __sveltekit_1t1a0mr.element, {
 							node_ids: [0, 5],
 							data,
 							form: null,
